--- a/ERPWeb/Views/AgroConfiguration/SaveRequisition.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SaveRequisition.cshtml
@@ -440,7 +440,7 @@
                 if (res.IsSuccess === true) {
                                 $('.toastrDefaultSuccess').trigger('click');
                     var RawMaterialRequisitionCode = res.File;
-                    window.open('/AgroConfiguration/GetSendAndReceiveRequisitionReport?RawMaterialRequisitionCode='+RawMaterialRequisitionCode,'_blank');
+                    window.open("/AgroConfiguration/GetSendAndReceiveRequisitionReport?RawMaterialRequisitionCode="+RawMaterialRequisitionCode,"_blank");
                                 
                                 setTimeout(function () {
                                     redirectPage('@Url.Action("GetRequisitionProduction")');
