--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
@@ -63,10 +63,10 @@
 
                 <a href="@Url.Action("AgroProductSalesReports", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" class="btn btn-sm btn-outline-danger" title="Download Invoice"><i class="fas fa-file-invoice"></i></a>
 
-                <a href="@Url.Action("AgroProductSalesChallanReport", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" class="btn btn-sm btn-outline-danger" title="Download Challan">
+                <a href="@Url.Action("AgroProductSalesChallanReport", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank"  class="btn btn-sm btn-outline-danger" title="Download Challan">
                     <i class="fa-solid fa-receipt"></i>
                 </a>
-                <a href="@Url.Action("AgroProductSalesInvoiceDropReports", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" class="btn btn-sm btn-outline-danger" title="Download Drop Invoice">
+                <a href="@Url.Action("AgroProductSalesInvoiceDropReports", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" data-item-download-ProductionSalesInfoId="@item.ProductSalesInfoId"  class="btn btn-sm btn-outline-dark " title="Download Drop Invoice">
                     <i class="fas fa-tint"></i></a>
 
 
