--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -151,7 +151,7 @@
                                                         <span class="error hide req-SupplierName font-weight-bold">Supplier Name is required!</span>
                                                     </div>
 
-                                                    <div class="col-md-2">
+                                                    <div class="col-md-3">
                                                         <div class="form-group">
                                                             <label for="ddlInvoiceDate">Invoice Date</label>
                                                             <div class="input-group-sm date" id="datePicker">
@@ -164,23 +164,22 @@
                                                         </div>
                                                     </div>
 
-                                                    <div class="col-md-2">
+                                                    <div class="col-md-3">
                                                         <label for="ddlChallanNo" class="control-label">Challan No.</label>
                                                         <input type="text" id="ddlChallanNo" class="form-control form-control-sm" />
                                                         <span class="error hide req-ddlChallanNo font-weight-bold">Chalan No is required!</span>
 
                                                     </div>
-                                                    <div class="col-md-2">
+                                                    <div class="col-md-3">
                                                         <label for="ddlInvoiceNo" class="control-label">Invoice No.</label>
                                                         <input type="text" id="ddlInvoiceNo" class="form-control form-control-sm" />
                                                         <span class="error hide req-ddlInvoiceNo font-weight-bold">Invoice No is required!</span>
                                                     </div>
 
-                                                    <div class="col-md-2">
+                                                    @*<div class="col-md-2">
                                                         <label for="ddlProductCode" class="control-label">Product Code</label>
                                                         <input type="text" id="ddlProductCode" class="form-control form-control-sm" />
-                                                        @*<span class="error hide req-ddlInvoiceNo font-weight-bold">Invoice No is required!</span>*@
-                                                    </div>
+                                                    </div>*@
 
                                                 </div>
                                             </div>
