--- a/ERPWeb/Views/AgroConfiguration/SalesPaymentList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesPaymentList.cshtml
@@ -324,7 +324,7 @@
 
 
         ddlPaymentMode.change(function () {
-            if (ddlPaymentMode.val() == "Check") {
+            if (ddlPaymentMode.val() == "Cheque") {
                 $("#divAccountNumber").show();
 
             }
